kubernetes/base/apps/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4004
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: api-gateway
